# MKYADA

./: .gitignore  LICENSE  README.md
.github/workflows/: app-release.yml  build-exe.yml  ci.yml  firmware-release.yml
app/: index.html  package-lock.json  package.json  vitest.config.ts
app/public/devices/: README.md
app/resources/circuitpython/: README.md
app/src/: App.tsx  index.css  main.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: layout.rs  lib.rs  overlay_win.rs  permissions.rs  player.rs  updater.rs  vars.rs
app/src-tauri/src/device/: bootloader.rs  drive.rs  mod.rs  serial.rs  serialfs.rs
app/src-tauri/src/profiles/: foreground.rs  mod.rs
app/src-tauri/src/recorder/: capture.rs  capture_macos.rs  mod.rs
app/src/components/: AssignmentEditor.tsx  Keypad.tsx  MacroEditor.tsx  OverlayView.tsx  Permissions.tsx  ProductImage.tsx  ProvisionWizard.tsx  SystemStatus.tsx  WriteProgress.tsx  dialog.tsx  toast.tsx  toolbar.tsx  ui.tsx
app/src/lib/: device-model.test.ts  device.tsx  devnames.ts  fixtures.test.ts  focus.ts  fs.ts  history.ts  ipc.ts  keys-cache.ts  layout.test.ts  layout.ts  macro-model.test.ts  macro-model.ts  nav.tsx  profiles.tsx  recorder-handoff.ts  recorder-model.test.ts  recorder-model.ts  settings.ts  sound.ts  types.ts  variables.ts
app/src/pages/: DevicesPage.tsx  KeysPage.tsx  ProfilesPage.tsx  RecorderPage.tsx  SettingsPage.tsx  SetupPage.tsx
community-macros/: README.md  inventory-plus-template.json
docs/: firmware-install.md  index.html  macos-install.md  macro-format.md  main.js  serial-protocol.md  styles.css  vision6.md
firmware/: boot.py  code.py  config.example.json
firmware/lib/: VERSIONS
firmware/lib/adafruit_bitmap_font/: bdf.py  bitmap_font.py  lvfontbin.py  pcf.py  ttf.py
firmware/macros/: key1.json
firmware/mkyada/: __init__.py  app.py  engine.py  hidmap.py  i18n.py  led.py  models.py  oled.py  proto.py  ui.py
hardware/: wiring.md
hardware/case/: FacePlate_3x2.stl  README.md  Stream Cheap RP2040.stl
hardware/oled-bringup/: README.md  SCHEMATIC.md  bringup.py
hardware/oled-bringup/device/: demo.py  demo_h.py  diag.py  inputs.py  keydetect.py  keytest.py  oled.py  scan.py
hardware/oled-bringup/lib/adafruit_bitmap_font/: glyph_cache.py
pi/: hid-gadget.sh  player.py  proto.py  triggerd.py  webapp.py
recorder/: macro_recorder.py
scripts/: build-firmware-dist.mjs
tests/: firmware_sim_test.py  fixtures_src.ts  gen_fixtures.ts  model_test.ts
tests/fixtures/: combo_ctrl_shift_s.json  command_echo.json  keystroke_f5.json  keystroke_restart_hold.json  launch_url.json  media_play_pause.json  recorded_click_type.json  sequence_copy_paste.json  sound_ding.json  text_hello.json  webhook_post.json
