[package]
name = "mkyada"
version = "0.1.2"
description = "MKYADA — Macro Keyboard You Always Dream About"
authors = ["Asil Balaban"]
license = "MIT"
repository = "https://github.com/asilbalaban/MKYADA"
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serialport = "4"
semver = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
enigo = "0.3"
active-win-pos-rs = "0.9"

# rdev's macOS keyboard handling calls TSM (input-source) APIs from the event-
# tap thread, which crashes on modern macOS (dispatch_assert_queue in
# HIToolbox). On macOS we use our own minimal CGEventTap (recorder/
# capture_macos.rs) that never touches TSM; rdev stays for Windows/Linux.
[target.'cfg(not(target_os = "macos"))'.dependencies]
rdev = "0.5"

[profile.release]
strip = true
lto = true
