[package]
name = "mkyada"
version = "0.9.1"
description = "MKYADA — Macro Keypad You Always Dream About"
authors = ["Asil Balaban"]
license = "MIT"
repository = "https://github.com/asilbalaban/MKYADA"
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# macos-private-api: transparent overlay window on macOS
# tray-icon: the app lives in the system tray so key actions keep working
# with the window closed
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
serialport = "4"
semver = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
active-win-pos-rs = "0.9"
# live system variables (CPU/RAM) for the feedback status strip
sysinfo = "0.33"

# WASAPI mic-mute state for live feedback; GDI+ layered-window path overlay
# (WebView2 transparent windows render black on some Windows machines, so the
# on-screen macro overlay is drawn natively instead — see overlay_win.rs).
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_System_Com",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_GdiPlus",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
] }

# rdev and enigo both resolve keys through TSM/HIToolbox APIs that modern
# macOS asserts must run on the main dispatch queue — calling them from a
# capture/playback thread kills the app with SIGTRAP. On macOS we use our own
# minimal CGEventTap capture (recorder/capture_macos.rs) and CGEventPost
# playback (player.rs); rdev + enigo stay for Windows/Linux.
[target.'cfg(not(target_os = "macos"))'.dependencies]
rdev = "0.5"
enigo = "0.3"

# AXIsProcessTrustedWithOptions needs a CFDictionary with the
# kAXTrustedCheckOptionPrompt key to both show the system prompt and register
# the app in the Accessibility list — plain AXIsProcessTrusted() (status-only)
# never adds an unlisted app to that list.
[target.'cfg(target_os = "macos")'.dependencies]
macos-accessibility-client = "0.0.1"

[profile.release]
strip = true
lto = true
